    \itemize{
      \item In package \pkg{parallel}, \code{makeForkCluster()} and the
      multicore-based functions use native byte order for serialization
      (deferred from 2.15.0).

      \item \code{lm.fit()}, \code{lm.wfit()}, \code{glm.fit()} and
      \code{lsfit()} do less copying of objects, mainly by using
      \code{.Call()} rather than \code{.Fortran()}.

      \item \code{.C()} and \code{.Fortran()} do less copying: unnamed
      arguments which are raw, logical, integer, real or complex vectors
      are not copied before the call, and (named or not) they are not
      copied after the call.  Lists are no longer copied (they are
      supposed to be used read-only in the C code).

      \item \code{tabulate()} makes use of \code{.C(DUP = FALSE)} and
      hence does not copy \code{bin}.  (Suggested by Tim Hesterberg.)
      It also avoids making a copy of a factor argument \code{bin}.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
   \itemize{
      \item The converters for use with \code{.C()} (see
      \code{?getCConverterDescriptions}) are deprecated: use the
      \code{.Call()} interface instead.  There are no known examples
      (they were never fully documented).
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item \command{R CMD INSTALL} with \env{_R_CHECK_INSTALL_DEPENDS_}
        set to a true value (as done by \command{R CMD check --as-cran})
        now restricts the packages available when lazy-loading as well
	as when test-loading (since packages such as \CRANpkg{ETLUtils}
	and \CRANpkg{agsemisc} had top-level calls to \code{library()}
	for undeclared packages).

	This check is now also available on Windows.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{lsfit()} lost the names from the residuals.

      \item More cases in which \code{merge()} could create a data frame
      with duplicate column names now give warnings.  Cases where