@@ -99,6 +99,9 @@ simpleLoess <-
     if(!N || !D)	stop("invalid 'x'")
     if(!length(y))	stop("invalid 'y'")
     x <- as.matrix(x)
+    if(!is.double(x)) storage.mode(x) <- "double"
+    if(!is.double(y)) storage.mode(y) <- "double"
+    if(!is.double(weights)) storage.mode(weoghts) <- "double"
     max.kd <-  max(N, 200)
     robust <- rep(1, N)
     divisor<- rep(1, D)
@@ -133,10 +136,7 @@ simpleLoess <-
         if (length(cell) != 1L) stop("invalid argument 'cell'")
         if (length(degree) != 1L) stop("invalid argument 'degree'")
 	z <- .C(C_loess_raw, # ../src/loessc.c
-		as.double(y),
-		as.double(x),
-		as.double(weights),
-		as.double(robust),
+		y, x, weights, robust,
 		as.integer(D),
 		as.integer(N),
 		as.double(span),
@@ -165,7 +165,7 @@ simpleLoess <-
 	fitted.residuals <- y - z$fitted.values
 	if(j < iterations)
 	    robust <- .Fortran(C_lowesw,
-			       as.double(fitted.residuals),
+			       fitted.residuals,
 			       as.integer(N),
 			       robust = double(N),
 			       integer(N))$robust
@@ -188,10 +188,8 @@ simpleLoess <-
 				 integer(N),
 				 pseudovalues = double(N))$pseudovalues
 	zz <- .C(C_loess_raw,
-		as.double(pseudovalues),
-		as.double(x),
-		as.double(weights),
-		as.double(weights),
+		as.double(pseudovalues), # ? needed
+		x, weights, weights,
 		as.integer(D),
 		as.integer(N),
 		as.double(span),
@@ -278,6 +276,8 @@ predLoess <-
     x <- x[, order.parametric, drop=FALSE]
     x.evaluate <- newx[, order.parametric, drop=FALSE]
     order.drop.sqr <- (2 - drop.square)[order.parametric]
+    if(!is.double(x)) storage.mode(x) <- "double"
+    if(!is.double(y)) storage.mode(y) <- "double"
     if(surface == "direct") {
         nas <- rowSums(is.na(newx)) > 0L
         fit <- rep(NA_real_, length(nas))
@@ -286,8 +286,8 @@ predLoess <-
 	if(se) {
             se.fit <- fit
 	    z <- .C(C_loess_dfitse,
-		    as.double(y),
-		    as.double(x),
+		    y,
+		    x,
 		    as.double(x.evaluate),
 		    as.double(weights*robust),
 		    as.double(robust),
@@ -307,8 +307,8 @@ predLoess <-
 	    se.fit[!nas] <- drop(s * sqrt(ses))
 	} else {
 	    fit[!nas] <- .C(C_loess_dfit,
-                            as.double(y),
-                            as.double(x),
+                            y,
+                            x,
                             as.double(x.evaluate),
                             as.double(weights*robust),
                             as.double(span),
@@ -344,8 +344,8 @@ predLoess <-
 	    se.fit <- rep(NA_real_, M)
 	    if(any(inside)) {
 		L <- .C(C_loess_ise,
-			as.double(y),
-			as.double(x),
+			y,
+			x,
 			as.double(x.evaluate[inside, ]),
 			as.double(weights),
 			as.double(span),
